Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2454

Crash in GettingStartedWelcomePageWidget::showFeature

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.1.0
    • Qt Creator 2.1.0
    • All Other Issues
    • None
    • Windows Vista x64
      Creator from f64cf427f2
    • 19abd0f2d37058bc5d9c9586696e895cd738a205

    Description

      Right after startup Creator crashed in GettingStartedWelcomePageWidget::showFeature(int), probably because m_currentFeature is -842150451 . See stacktrace.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dmolkent Daniel Molkentin (Inactive Nokia Account!) (Inactive)
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes