Initialize correct member. Fixes potential crash on startup.

Task-number: QTCREATORBUG-2454